[package]
name = "piston-tutorial-1"
version = "0.0.1"
authors = ["Sam Hunter <swilkinsonhunter@gmail.com>"]
keywords = []

[[bin]]
name = "piston-tutorial-1"
path = "src/main.rs"

[dependencies]
pistoncore-sdl2_window = "0.1.0"
piston = "0.1.4"
piston2d-graphics = "0.1.3"
piston2d-opengl_graphics = "0.1.0"